# Python_WEB_DZ_7

./: README.md  config.ini  main.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 4a537c943b72_init.py
src/: db.py  models.py
